# hermes-trader

./: .env.backup  .env.example  .gitignore  ACTIVATION_CHECKLIST.md  KILL_SWITCH.example  Makefile  README.md  RESEARCH_OPTIONS_ENGINE.md  TRADING_SYSTEM.md  install_options_analytics.sh  monitor_report.py  pyproject.toml  test_all_modules.py  test_deep_dive.py  test_enhanced_workflow.py  test_final_verify.py
docs/: ALPACA_MCP_INTEGRATION.md  ARCHITECTURE.md  AUTONOMY_MANDATE.md  BROKER_SETUP.md  INCIDENT_RESPONSE.md  PHASE_2_NAUTILUS_PLAN.md  REALTIME_PRICE_DETECTION.md  RUNBOOK.md  SECURITY.md  TRADINGAGENTS_AUDIT.md  TRADINGAGENTS_INTEGRATION.md  VIBE_TRADING_AUDIT.md  VIBE_TRADING_INTEGRATION.md
research/: AGENT_REACH_RESEARCH.md  WORLD_CLASS_OPTIONS_ENGINE.md  api_broker_comparison.md  broker_comparison_july2026.md  hol_greeks_research.md  iv_surface_research.md  max-power-gaps-2026-07-07.md  pdt_elimination_research.md  small_account_brokers_july2026.md
research/archive/: ENGINE_POWER_ANALYSIS.md  ENGINE_POWER_ANALYSIS_ARCHIVED.md  NOT_WIRED.md  options_engine_dead_code.py
src/hermes_trader/: aggressive_sizer.py  auto_trader.py  backtest_engine.py  cli.py  config.py  constants.py  correlation_regime.py  daily_summary.py  dealer_positioning.py  earnings_calendar.py  engine_config.py  engine_upgrades.py  entry_gates.py  gamma_positioning.py  greeks_engine.py  health_check.py  (+34 more)
tests/: conftest.py  test_backtest.py  test_hol_greeks.py  test_intelligent_risk.py  test_iv_surface.py  test_mleg.py  test_options_flow.py  test_pipeline.py  test_realtime_price_engine.py
(+21 files in other folders)
